Fix icon spacing in banner

--- a/src/renderer/assets/styles/components/_banner.scss
+++ b/src/renderer/assets/styles/components/_banner.scss
@@ -4,7 +4,7 @@
 	justify-content: center;
 	width: 100%;
 
-	.svg-wrapper {
+	svg {
 		margin-right: 8px;
 		line-height: 0;
 	}
